--- a/KTU-SA-WEB/src/pages/ktuFSA/components/heroImage/HeroImage.module.css
+++ b/KTU-SA-WEB/src/pages/ktuFSA/components/heroImage/HeroImage.module.css
@@ -30,8 +30,8 @@
 }
 
 .Text {
+    margin-top: 25px;
     font-size: 20px;
-    max-width: 20vw;
 }
 
 .HeroImage {
